# sistema-solar-cg

./: .clang-format  CMakeLists.txt  camera.h  main.cpp  mesh.cpp  mesh.h  meson.build  planet.cpp  planet.h  shader.cpp  shader.fragment  shader.h  stb_image.h  texture.cpp  texture.h  transform.h  window.cpp  window.h
