cmake_minimum_required(VERSION 2.8)

project(opengl-cmake)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
configure_file("ball.obj" "ball.obj" COPYONLY)
configure_file("earth.jpg" "earth.jpg" COPYONLY)
configure_file("jupiter.jpg" "jupiter.jpg" COPYONLY)
configure_file("moon.jpg" "moon.jpg" COPYONLY)
configure_file("space.jpg" "space.jpg" COPYONLY)
configure_file("sun.jpg" "sun.jpg" COPYONLY)
configure_file("shader.fragment" "shader.fragment" COPYONLY)
configure_file("shader.vertex" "shader.vertex" COPYONLY)
configure_file("shader2.fragment" "shader2.fragment" COPYONLY)
configure_file("shader2.vertex" "shader2.vertex" COPYONLY)
add_executable(${PROJECT_NAME} "main.cpp" "shader.cpp" "window.cpp" "texture.cpp" "mesh.cpp" "obj_loader.cpp" "planet.cpp")
if(WIN32)
    target_link_libraries(${PROJECT_NAME} opengl32 glew32 glfw3)
else()
    target_link_libraries(${PROJECT_NAME} GL GLEW glfw)
endif()
